--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,22 +1,9 @@
-"Your Name":
+"admin":
+  name: Le Thien Phuc Nguyen
   bold: true
 
-"Robert White":
-  url: https://www.google.com/?q=Robert+White
+"Yong Jae Lee":
+  url: https://pages.cs.wisc.edu/~yongjaelee/
 
-"Charles Green (MIT)":
-  name: Charles Green
-  url: https://www.google.com/?q=Charles+Green+MIT
-
-"Charles Green (Stanford)":
-  name: Charles Green
-  url: https://www.google.com/?q=Charles+Green+Stanford
-
-"Garrett Harris":
-  url: https://www.google.com/?q=Garrett+Harris
-
-"James Wang":
-  url: https://www.google.com/?q=James+Wang
-
-"John Doe":
-  url: https://www.google.com/?q=John+Doe
+"Zhuoran Yu":
+  url: https://www.zhuoranyu.com/
