--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,33 +1,27 @@
-primary_name: "Your Name"
+primary_name: "Le Thien Phuc Nguyen"
 secondary_name: ""
-navbar_name: "Your Name"
+navbar_name: "Le Thien Phuc Nguyen"
 
 positions:
-- logo: /assets/images/badges/MIT_Social_circle.png  # Logo is optional
-  name: Position 1 with logo
-- name: Position 2 without logo
+  - logo: /assets/images/badges/uwmad.jpeg # Logo is optional
+    name: Affiliated with University of Wisconsin - Madison
+  - name: Undergraduate Researcher
 
-
-email: "your@email.com"
+email: "plnguyen6@wisc.edu"
 # cv_link: link-to-your-cv-file
-gscholar: xFmQpf4AAAAJ  # This is an example, replace it with your own Google Scholar ID
-github: your_github_id
-twitter: your_twitter_id  # Do not include the '@' symbol
+# gscholar: xFmQpf4AAAAJ # This is an example, replace it with your own Google Scholar ID
+github: plnguyen2908
+# twitter: your_twitter_id # Do not include the '@' symbol
 # wechat_qrcode: /assets/images/etc/wechat.jpg
 # wechat_prompt: >-
 #   Please tell me your <strong>name</strong> and <strong>affiliation</strong> (current or past) when adding my wechat. Thanks!
-# linkedin: your-linked-in-id
+linkedin: plnguyen2908
 # orcid: 0000-0000-0000-0000
 
 short_bio_text_justify: false
 short_bio: >-
   <p>
-    A <a href="https://en.wikipedia.org/wiki/Bicolor_cat" target="_blank">bicolor cat</a> is a cat with white fur combined with fur of some other colour, for example solid black, tabby, or colourpointed.
-  </p>
-  <p>
-    There are various patterns of a bicolour cat. These range from the Van-patterned (colour on the crown of the head 
-    and the tail only) to a solid colour with a throat locket or medallion. Bicolour coats are found in many cat breeds, 
-    as well as being common in domestic longhair and domestic shorthair cats.
+    Bio to be added
   </p>
 
 portrait_url: /assets/images/photos/portrait.jpg
@@ -35,27 +29,26 @@ portrait_caption: >-
   Photo by Manja Vitolic on Unsplash (this caption is optional, comment it out to disable).
 
 education:
-- name: Massachusetts Institute of Technology
-  logo: /assets/images/badges/MIT_Social_circle.png
-  position: >- 
-    Department of Electrical Engineering and Computer Science <br/>
-    Ph.D. Student
-  date: Sep. 2024 - present
-- name: Peking University
-  logo: /assets/images/badges/PKU_red.png
-  position: B.S. in Computer Science
-  date: Sep. 2019 - Jul. 2021
-
+  # - name: University of Wisconsin - Madison
+  #   logo: /assets/images/badges/uwmad.jpeg
+  #   position: >-
+  #     Department of Electrical Engineering and Computer Science <br/>
+  #     Ph.D. Student
+  #   date: Sep. 2024 - present
+  - name: University of Wisconsin - Madison
+    logo: /assets/images/badges/uwmad.jpeg
+    position: B.S. in Computer Science, Data Science, Math, and Statistics
+    date: Sep. 2022 - present
 # experience:
 # - name: Peking University
 #   logo: /assets/images/badges/PKU_red.png
 #   position: Research Intern
 #   date: Sep. 2019 - Jul. 2021
 
-awards:
-- name: Award Name 2
-  date: 2024
-- name: Award Name 1 
-  date: 2021
-- name: A quick brown fox jumps over the lazy dog and runs away award
-  date: 2021
+# awards:
+#   - name: Award Name 2
+#     date: 2024
+#   - name: Award Name 1
+#     date: 2021
+#   - name: A quick brown fox jumps over the lazy dog and runs away award
+#     date: 2021
