--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -50,10 +50,14 @@ education:
 #   position: Research Intern
 #   date: Sep. 2019 - Jul. 2021
 
-# awards:
-#   - name: Award Name 2
-#     date: 2024
-#   - name: Award Name 1
-#     date: 2021
-#   - name: A quick brown fox jumps over the lazy dog and runs away award
-#     date: 2021
+awards:
+  - name: Gold medal in the ICPC North Central North America (NCNA)
+    date: 2023
+  - name: Silver medal in the ICPC North Central North America (NCNA)
+    date: 2022
+  - name: Third prize in the Vietnam National Olympiad in Informatics
+    date: 2022
+  - name: Second prize in the ICPC Vietnam National Round
+    date: 2021
+  - name: Second prize in the Vietnam National University Olympiad in Informatics
+    date: 2021
