--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -21,8 +21,7 @@ linkedin: plnguyen2908
 short_bio_text_justify: false
 short_bio: <div>
   <p>
-  Hi, my name is Le Thien Phuc Nguyen, and I am a third-year undergraduate student in the Computer Sciences Department
-  at the University of Wisconsin-Madison, advised by Professor <a href="https://pages.cs.wisc.edu/~yongjaelee/"> Yong Jae Lee </a>.
+  Hi, my name is Le Thien Phuc Nguyen. </p> <p> I am from Vietnam, and I am a third-year undergraduate student at the University of Wisconsin-Madison, advised by Professor <a href="https://pages.cs.wisc.edu/~yongjaelee/"> Yong Jae Lee </a>.
   Fortunately, I have a chance to work with my mentor <a href="https://www.zhuoranyu.com/">Zhuoran Yu</a>, a PhD student from Professor Lee's lab.
   </p>
   <p>
